--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "stream-browserify": "^3.0.0",
     "umi-request": "^1.4.0",
     "web-vitals": "^2.1.4",
+    "xss": "^1.0.13",
     "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
